kc-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kc
  name: kc-deployment
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    app: kc
  type: ClusterIP
