kc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kc-ingress
spec:
  backend:
    serviceName: kc-deployment
    servicePort: 80
